Fixed word wrapping on game chats
Fixes #96

A similar issue exists on the main chat page, however this fix seems to
push off the users list on the chat page and seems to be fine on the
game chat page, so more css work will be needed on the main chat page if
we find it to be particularly problematic there.

--- a/src/views/Game/Chat.styl
+++ b/src/views/Game/Chat.styl
@@ -79,9 +79,7 @@ game-chat-user-list-width=10rem;
 
     .chat-line {
         width: 100%;
-        word-wrap: break-word;
-        word-break: break-all;
-        white-space: normal;
+        overflow-wrap: break-word;
     }
 
     .timestamp {
